--- a/o_meni.html
+++ b/o_meni.html
@@ -53,7 +53,7 @@ nav a:hover{background:#ffb6c1;color:#1e121a;transform:scale(1.08);}
     <img src="WhatsApp Image 2026-01-23 at 20.38.46.jpeg" alt="Fotografija 1" width="550" height="350">
 </div>
 
-<p style="margin-top:25px;"><b>Moj gif:</b></p>
+<p style="margin-top:25px;"><b>Moja najdraža pjesma <3:</b></p>
 <p>
     <a href="https://www.youtube.com/watch?v=SOJpE1KMUbo&list=RDSOJpE1KMUbo&start_radio=1" target="_blank">      
 		Dave - Raindance (ft. Tems)
@@ -62,4 +62,5 @@ nav a:hover{background:#ffb6c1;color:#1e121a;transform:scale(1.08);}
 
 </div>
 </body>
+
 </html>
